--- a/first-assignment/style.css
+++ b/first-assignment/style.css
@@ -44,11 +44,14 @@ nav, .nav {
 .main {
     padding: 32px 40px 32px 40px;
     background-color: #6a36a2;
-    display: flex;
 }
 
 .main div {
-    flex: 1;
+    float: left;
+}
+
+.clear {
+    clear: both;
 }
 
 .content {
